k8s/setup/default-peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default-peer-authentication"
  namespace: "default"
spec:
  mtls:
    mode: PERMISSIVE
