k8s/setup/knative-peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "knative-peer-authentication"
  namespace: "knative-serving"
spec:
  mtls:
    mode: STRICT
