k8s/setup/service-authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-knative-serving
 namespace: default
spec:
 action: ALLOW
 rules:
 - from:
   - source:
      namespaces: ["knative-serving"]
